[package]
name = "pcf"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
hex_color = "3.0.0"
image = "0.25.5"
json = "0.12.4"
lzma-rust = "0.1.7"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
strip = true

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
strip = true
