[package]
name = "pixel-clustering-format"
version = "1.0.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
colored = "3.1.1"
const-currying = "0.0.5"
hex_color = "3.0.0"
image = "0.25.9"
json = "0.12.4"
rayon = "1.11.0"
zpaq_rs = "1.0.2"
crossterm = "0.29.0"
rfd = "0.17.2"
clearscreen = "4.0.5"
kdam = "0.6.4"
egui = "0.33.3"
eframe = "0.33.3"
rkyv = "0.8.15"

[profile.dev]
codegen-units = 512

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
strip = true
debug-assertions = false

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
strip = true
